# AthenaRemastered

./: .gitignore  Athena Remastered.sln  CHANGELOG.md  LICENSE  README.md  workshop_changenote.txt  workshop_description.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: battleye_compatibility.md  bug_report.md  feature_request.md
@AthenaRemastered/: AthenaServerSettings.txt  meta.cpp  mod.cpp
@AthenaRemastered/keys/: AthenaRemasteredKey.bikey
AthenaRemastered/: launch.ps1  pack-pbo.ps1  publish.ps1
AthenaRemastered/@AthenaRemastered/: meta.cpp  mod.cpp
AthenaRemastered/@AthenaRemastered/addons/: athena.pbo.AthenaRemasteredKey.bisign
AthenaRemastered/Backend/: AthenaRemastered.Server.csproj  AthenaRemastered.Server.http  Program.cs
AthenaRemastered/Backend/Controllers/: GameController.cs  StaticMapController.cs
AthenaRemastered/Backend/Hubs/: AthenaHub.cs
AthenaRemastered/Backend/Models/: GameState.cs
AthenaRemastered/Backend/Properties/: launchSettings.json
AthenaRemastered/Backend/Services/: BroadcastService.cs  GameStateService.cs  (+2 more)
AthenaRemastered/Extension/: AthenaServer.rc  CMakeLists.txt  config.h  dllmain.cpp  http_client.h  json_builder.h
AthenaRemastered/Extension/test/: test-extension.ps1  test_extension.cpp
AthenaRemastered/Frontend/: icon-mapping.md  package-lock.json  package.json  vite.config.ts
AthenaRemastered/tools/: Get-AthenaDllMetadata.ps1  insert_funcs.py  paa2png.py
docs/: BATTLEYE_REGISTRATION_AND_RELEASE.md  BATTLEYE_SUBMISSION_EMAIL.txt  v1.1.6-preview.md
publish/wwwroot/: index.html
(+44 files in other folders)
